# cbs

./: Cargo.toml  README.md
crates/cbs_plugin_sdk/: Cargo.toml
crates/cbs_plugin_sdk/src/: lib.rs
data/: dice_roll.rs  hello_world.rs  hyper_headers.rs  lhello.rs  rustls_smoke.rs  serde_derive_smoke.rs
schemas/: plugin_abi.fbs
src/: actions.rs  bus.rs  cargo.rs  cargo_recipes.rs  context.rs  core.rs  exec.rs  main.rs  plugin_abi.rs  plugins.rs  rust_plugin.rs  workspace.rs
test_workspaces/https_client/: WORKSPACE.toml
test_workspaces/https_client/app/: BUILD.toml  main.rs
test_workspaces/hyper/: WORKSPACE.toml
test_workspaces/hyper/app/: BUILD.toml
test_workspaces/rand/: WORKSPACE.toml
test_workspaces/rand/app/: BUILD.toml  main.rs
test_workspaces/rustls/: WORKSPACE.toml
test_workspaces/rustls/app/: BUILD.toml  main.rs
test_workspaces/tokio/: WORKSPACE.toml
test_workspaces/tokio/app/: BUILD.toml  main.rs
