[package]
name = "cbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.10"
tokio = { version = "0.2.25", features = ["full"] }
hyper-tls = "0.4.3"
futures = "0.3.21"
toml = "0.8.8"
serde = "1.0.193"
